--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.0.0",
-    "body-parser": "^1.2.0"
+    "body-parser": "^1.2.0",
+    "async": "^0.8.0"
   },
   "engines": {
     "node": "0.10.x"
